# hiccup

./: .editorconfig  .flake8  Makefile  README.md  default-config.json  hiccup.py  pyproject.toml
docs/: default-config.json
extra/packaging/arch/: PKGBUILD
extra/packaging/fedora/: BUILDING.md  hiccup.spec
src/hiccup/: __init__.py  helpers.py  hiccup.py
