[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hiccup"
version = "0.0.1"
authors = [
    { name = "getchoo", email="getchoo@tuta.io"},
]
description = "a python script to help keep you up to date"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/getchoo/hiccup"
"Bug Tracker" = "https://github.com/getchoo/hiccup/issues"

[project.scripts]
hiccup = "hiccup:main"
